--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chart.js": "^3.0.2",
     "chartjs-adapter-moment": "^1.0.0",
     "cruip-js-toolkit": "^1.0.3",
+    "font-awesome": "^4.7.0",
     "moment": "^2.29.1",
     "node-sass": "^5.0.0",
     "postcss": "^8.2.9",
