--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mosaic-light-react",
+  "name": "digital-presence-index",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
